# scOracle

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: test.py
chatbot/: app.py  cli.py  test.ipynb
ingest/: build_index.py  doc_loaders.py  html_doc_loader.py  test.ipynb
